# ctemplate-lib

./: .gitignore  Makefile.am  README.md  autogen.sh  calgorithm.c  calgorithm.h  calloc.c  calloc.h  chash_map.c  chash_map.h  chash_set.c  chash_set.h  citerator.c  citerator.h  cmap.c  cmap.h  configure.ac  cqueue.c  cqueue.h  cset.c  cset.h  ctemplate-lib.pc.in  cvector.c  cvector.h  template_make.mk  template_utils_makefile.mk
ctemplate-lib/: cqueue-internal.h  cqueue-template.h  cqueue.c  cqueue.h  ctemplate-lib.xml  cvector.c  cvector.h
ctemplate-lib/hashmap/: chashmap-int-template.h  chashmap-internal.h  chashmap-template.h  chashmap.c  chashmap.h  chashmap.xml  hashpair.c  hashpair.h
ctemplate-lib/hashset/: bucket.c  bucket.h  chashset-int-template.h  chashset-internal.h  chashset-template.h  chashset.c  chashset.h  chashset.xml
ctemplate-lib/map/: cmap-int-template.h  cmap-internal.h  cmap-template.h  cmap.c  cmap.h  cmap.xml  pair.c  pair.h
ctemplate-lib/priorityqueue/: cpriorityqueue-int-template.h  cpriorityqueue-internal.h  cpriorityqueue-template.h  cpriorityqueue.c  cpriorityqueue.h  cpriorityqueue.xml  priorityqueue-types.h
ctemplate-lib/ptr/: cptr-int-template.h  cptr-internal.h  cptr-template.h  cptr.c  cptr.h  cptr.xml
ctemplate-lib/queue/: cqueue-int-template.h  cqueue-internal.h  cqueue-template.h  cqueue.c  cqueue.h  cqueue.xml
ctemplate-lib/set/: cset-int-template.h  cset-internal.h  cset-template.h  cset.c  cset.h  cset.xml  treenode.c  treenode.h
ctemplate-lib/vector/: cvector-int-template.h  cvector-internal.h  cvector-template.h  cvector.c  cvector.h  cvector.xml
pk_template_algorithm/: template_algorithm_makefile.mk
pk_template_algorithm/pk_template_algorithm_code/_inc/: template_algorithm.h
pk_template_algorithm/pk_template_algorithm_code/_src/: template_algorithm.c  template_algorithm.cpp
pk_template_algorithm/pk_template_algorithm_user/: calgorithm.h  template_algorithm.h  template_algorithm_uext.h
pk_template_algorithm/pk_template_algorithm_user/_set/: template_algorithm_uset.h.txt
pk_template_iterator/pk_template_iterator_code/_inc/: template_iterator_ext.h
pk_template_iterator/pk_template_iterator_code/_src/: template_iterator.c  template_iterator.cpp
pk_template_iterator/pk_template_iterator_user/: template_iterator.h  template_iterator_evs.h  template_iterator_types.h  template_iterator_uext.h
pk_template_iterator/pk_template_iterator_user/_set/: template_iterator_uset.h.txt
pk_template_map/: template_map_makefile.mk
pk_template_map/pk_template_map_code/_src/: template_map.cpp
pk_template_map/pk_template_map_user/: template_map_evs.h
pk_template_map/pk_template_map_user/_set/: template_map_uset.h.txt
pk_template_queue/: template_queue_makefile.mk
pk_template_queue/pk_template_queue_code/_inc/: template_queue_ext.h
pk_template_queue/pk_template_queue_code/_src/: template_queue.cpp
pk_template_queue/pk_template_queue_user/: template_queue.h  template_queue_evs.h  template_queue_uext.h
pk_template_queue/pk_template_queue_user/_set/: template_queue_uset.h.txt
pk_template_set/pk_template_set_code/_src/: template_set.cpp
pk_template_set/pk_template_set_user/: template_set_types.h  template_set_uext.h
pk_template_set/pk_template_set_user/_set/: template_set_uset.h.txt
pk_template_vector/: template_vector_makefile.mk
pk_template_vector/pk_template_vector_code/_inc/: template_vector_base.h  template_vector_ext.h
pk_template_vector/pk_template_vector_code/_src/: cvector.c  template_vector.c  template_vector_base.c
pk_template_vector/pk_template_vector_user/: template_vector.h  template_vector_base.h  template_vector_evs.h  template_vector_uext.h
pk_template_vector/pk_template_vector_user/_set/: template_vector_uset.h.txt
template_algorithm/: calgorithm.c  calgorithm.h  template_algorithm.c  template_algorithm.h  template_algorithm.mk  template_algorithm_evs.h  template_algorithm_ext.h  template_algorithm_make.mk  template_algorithm_types.h
template_algorithm/_set/: template_algorithm_set.h.txt
template_alloc/: calloc.c  calloc.h
template_iterator/: citerator.c  citerator.h  template_iterator.c  template_iterator.h  template_iterator.mk  template_iterator_makefile.mk
template_iterator/_set/: template_iterator_set.h.txt
template_map/: cmap.c  cmap.h  cpair.h  template_map.c  template_map.h  template_map.mk  template_map_ext.h  template_map_types.h  template_map_uext.h
template_map/_set/: template_map_set.h.txt
template_queue/: cqueue.c  cqueue.h  template_queue.mk  template_queue_types.h
template_queue/_set/: template_queue_set.h.txt
template_set/: cset.c  cset.h  template_set.h  template_set.mk  template_set_evs.h  template_set_ext.h
template_set/_set/: template_set_set.h.txt
template_vector/: cvector.c  cvector.h  template_vector.h  template_vector.mk
template_vector/_set/: template_vector_set.h.txt
tst/: gtest-template.c  gtest-template.h  hashmap-test.cc  hashset-test.cc  map-test.cc  map_gtest.cpp  priority-queue-test.cc  ptr-test.cc  queue-test.cc  queue_gtest.cpp  set-test.cc  set_gtest.cpp  vector-test.cc
